--- a/Bengine/Bengine.vcxproj
+++ b/Bengine/Bengine.vcxproj
@@ -52,7 +52,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)\..\SDL2-2.0.3\include;$(ProjectDir)\..\glm-0.9.7.1\;$(ProjectDir)\..\glew-1.13.0\include;$(ProjectDir)\..\OpenAL-1.1\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\..\SDL2-2.0.3\include;$(ProjectDir)\..\glm-0.9.7.1\;$(ProjectDir)\..\glew-1.13.0\include;$(ProjectDir)\..\openal-soft-1.17.1\include;$(ProjectDir)\..\freealut-1.1.0\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -60,7 +60,7 @@
     </Link>
     <Lib>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;glew32.lib;OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(ProjectDir)\..\SDL2-2.0.3\lib\x86;$(ProjectDir)\..\glew-1.13.0\lib\Release\Win32;$(ProjectDir)\..\OpenAL-1.1\libs\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProjectDir)\..\SDL2-2.0.3\lib\x86;$(ProjectDir)\..\glew-1.13.0\lib\Release\Win32;$(ProjectDir)\..\openal-soft-1.17.1\libs\Win32;$(ProjectDir)\..\freealut-1.1.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
