--- a/_Projects/ZombieGame/ZombieGame.vcxproj
+++ b/_Projects/ZombieGame/ZombieGame.vcxproj
@@ -47,13 +47,14 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>..\..\SDL2-2.0.3\include;..\..\glew-1.13.0\include;..\..\glm-0.9.7.1;..\..\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\SDL2-2.0.3\include;..\..\glew-1.13.0\include;..\..\glm-0.9.7.1;..\..\;..\..\freealut-1.1.0\include;..\..\openal-soft-1.17.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;opengl32.lib;glew32.lib;Bengine.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\..\glew-1.13.0\lib\Release\Win32;.\Debug;..\..\SDL2-2.0.3\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;opengl32.lib;glew32.lib;alut.lib;OpenAL32.lib;Bengine.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\..\glew-1.13.0\lib\Release\Win32;.\Debug;..\..\SDL2-2.0.3\lib\x86;..\..\openal-soft-1.17.1\libs\Win32;..\..\freealut-1.1.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <PerUserRedirection>true</PerUserRedirection>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
